Add Login component and login logout actions

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,3 +9,5 @@
 @import "components/container";
 @import "components/page-title";
 @import "components/todo";
+@import "components/login";
+@import "components/page-actions";
